<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PlayerActivity">

<!--    first row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

<!--        back button -->
        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:padding="5dp"
            android:contentDescription="@string/back_btn" />

<!--        title -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

<!--        favorite icon-->
        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_empty_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn" />


    </LinearLayout>

<!--   current image or thumbnail of song-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/music_icon_splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

<!--  current  song name-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center"/>

<!--    floating buttons for perivous, pause or next-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

<!--       perivous song button icon-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/previousBtnPA"
            android:layout_height="wrap_content"
            app:icon="@drawable/perivous_icon"
            app:iconSize="40dp"/>
<!--   play & pause button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@android:color/white"
            app:iconSize="50dp"/>
<!--next song button icon-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/nextBtnPA"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"/>


    </LinearLayout>

<!--    seekbar and textview for it-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/start_tv"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/end_tv"/>


    </LinearLayout>

<!--    Last Row for Various Player Option-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

<!--        Repeat Button-->
        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

<!--        Equalizer Button-->
        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

<!--        Timer Button-->
        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>

<!--        Share Button-->
        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>





    </LinearLayout>


</LinearLayout>